Fix checkbox alignment
Centre align the checkboxes on property table in the model composer

--- a/client/less/ui/forms.less
+++ b/client/less/ui/forms.less
@@ -13,6 +13,19 @@ form.ui-form {
 
   .ui-form-group {
     margin-bottom: 2rem;
+    line-height: 2.5rem;
+
+    label {
+      margin: 0;
+    }
+
+    &.center {
+      text-align: center;
+
+      select, input {
+        margin: 0.5rem;
+      }
+    }
 
     &.invalid {
 
